2002-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove CFLAGS_DEBUG_OPTIMIZE_V,
	CXXFLAGS_DEBUG_OPTIMIZE_V, LDFLAGS_DEBUG_V, CFLAGS_DEFAULT.
	Support @CFLAGS@, @CXXFLAGS@.

2002-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Allow autoconf-2.56.

2002-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Add CXX_FOR_*, CXXFLAGS_FOR_*.
	Fix stupid typo (continue/configure).
	* aclocal/prog-cc.m4: Remove obsolete comments.
	Acknowledge CFLAGS.

2002-11-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: _RTEMS_OUTPUT_SUBDIRS: Move ac_subconfigure_vars to the
	end of the args passed to sub-configure-scripts. (Reported by
	Wulf Hofbauer <wh73@cornell.edu>)

2002-11-12	Joel Sherrill <joel@OARcorp.com>

	* configure.ac: Remove make/compilers/Makefile.

2002-11-11	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20021111.

2002-11-11	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20021111.

2002-11-11	Joel Sherrill <joel@OARcorp.com>

	* VERSION: Updated to rtems-ss-20021111.

2002-11-11	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20021111.

2002-11-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove rel rule.

2002-11-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Allow autoconf > 2.52, automake > 1.6.

2002-11-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove make/Templates/Makefile.
	* README.configure: Minor massaging.

2002-11-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	Further preparations for autoconf > 2.52:
	* aclocal/enable-inlines.m4: Use AS_IF instead of if/then/else.
	* aclocal/quoting.m4: Use `eval echo $ac_args` to unquote $ac_arg.
	* aclocal/target.m4: Use `eval echo $rtems_args` to unquote $ac_arg.

2002-11-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Adapations to autoconf > 2.52.

2002-11-01	Joel Sherrill <joel@OARcorp.com>
