@@ -1,3 +1,8 @@
+2002-11-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* acinclude.m4: Use AS_IF instead of if/then/else/endif.
+	* configure.ac: Ditto.
+
 2002-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* automake/compile.am: Remove CFLAGS_DEBUG_OPTIMIZE_V,
